--- a/app/views/tweets/_tweets.html.erb
+++ b/app/views/tweets/_tweets.html.erb
@@ -9,7 +9,8 @@
 				<div>
 					<p class="mb-0"><%= tweet.content %></p>
 				</div>
-				<div>
+				<div style="display: flex">
+					<%= render 'favorites/favorite_button', tweet: tweet %>
 					<% if current_user == tweet.user %>
 						<%= link_to 'Delete', tweet_path(tweet.id), method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm' %>
 					<% end %>
