--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -5,18 +5,17 @@
 				<h3 class="card-title"><%= @user.name %></h3>
 			</div>
 			<div class="card-body">
-				<img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 500 }) %>" alt="">
+				<img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 500 }) %>">
 			</div>
 		</div>
-		<%= render 'relationships/follow_button', user: @user %>
 	</aside>
 	<div class="col-sm-8">
-		<ul class="nav nav-tabs nav-justified mb-3">
+		<ul class="nav nav-tabs">
 			<li class="nav-item"><a href="<%= user_path(@user.id) %>" class="nav-link <%= 'active' if current_page?(user_path(@user.id)) %>">Tweets <span class="badge badge-secondary"><%= @count_tweets %></span></a></li>
-			<li class="nav-item"><a href="<%= followings_user_path(@user.id) %>" class="nav-link <%= 'active' if current_page?(followings_user_path(@user.id)) %>">Followers <span class="badge badge-secondary"><%= @count_followings %></span></a></li>
+			<li class="nav-item"><a href="<%= followings_user_path(@user.id) %>" class="nav-link <%= 'active' if current_page?(followings_user_path(@user.id)) %>">Followings <span class="badge badge-secondary"><%= @count_followings %></span></a></li>
 			<li class="nav-item"><a href="<%= followers_user_path(@user.id) %>" class="nav-link <%= 'active' if current_page?(followers_user_path(@user.id)) %>">Followers <span class="badge badge-secondary"><%= @count_followers %></span></a></li>
 			<li class="nav-item"><a href="<%= likes_user_path(@user.id) %>" class="nav-link <%= 'active' if current_page?(likes_user_path(@user.id)) %>">Favorites <span class="badge badge-secondary"><%= @count_favorites %></span></a></li>
 		</ul>
-		<%= render 'users', users: @followers %>
+		<%= render 'tweets/tweets', tweets: @favorites %>
 	</div>
 </div>
