--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,7 @@
 			<li class="nav-item"><a href="<%= user_path(@user.id) %>" class="nav-link <%= 'active' if current_page?(user_path(@user.id)) %>">Tweets <span class="badge badge-secondary"><%= @count_tweets %></span></a></li>
 			<li class="nav-item"><a href="<%= followings_user_path(@user.id) %>" class="nav-link <%= 'active' if current_page?(followings_user_path(@user.id)) %>">Followings <span class="badge badge-secondary"><%= @count_followings %></span></a></li>
 			<li class="nav-item"><a href="<%= followers_user_path(@user.id) %>" class="nav-link <%= 'active' if current_page?(followers_user_path(@user.id)) %>">Followers <span class="badge badge-secondary"><%= @count_followers %></span></a></li>
+			<li class="nav-item"><a href="<%= likes_user_path(@user.id) %>" class="nav-link <%= 'active' if current_page?(likes_user_path(@user.id)) %>">Favorites <span class="badge badge-secondary"><%= @count_favorites %></span></a></li>
 		</ul>
 		<%= render 'tweets/tweets', tweets: @tweets %>
 	</div>
